--- a/it/uthos.html
+++ b/it/uthos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
   <head>
-    <title>Uthos - Uthos Atlas</title>
+    <title>Uthos World Map</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -171,25 +171,24 @@
     <script src="/it/data/uthos/src/icons.js"></script>
 
     <!-- Leaflet Markers: Terrain -->
-    <script src="/it/data/uthos/terrain/mountains.js"></script>
+    <!-- <script src="/it/data/uthos/terrain/mountains.js"></script>
     <script src="/it/data/uthos/terrain/islands.js"></script>
     <script src="/it/data/uthos/terrain/waters.js"></script>
     <script src="/it/data/uthos/terrain/hills.js"></script>
     <script src="/it/data/uthos/terrain/forests.js"></script>
     <script src="/it/data/uthos/terrain/deserts.js"></script>
-    <script src="/it/data/uthos/terrain/swamps.js"></script>
+    <script src="/it/data/uthos/terrain/swamps.js"></script> -->
 
     <!-- Leaflet Markers: POIs -->
-    <script src="/it/data/uthos/roads.js"></script>
-    <script src="/it/data/uthos/regions.js"></script>
     <script src="/it/data/uthos/capitals.js"></script>
+    <!-- <script src="/it/data/uthos/roads.js"></script>
+    <script src="/it/data/uthos/regions.js"></script>
     <script src="/it/data/uthos/cities.js"></script>
     <script src="/it/data/uthos/keeps.js"></script>
     <script src="/it/data/uthos/villages.js"></script>
     <script src="/it/data/uthos/ruins.js"></script>
     <script src="/it/data/uthos/locations.js"></script>
-    <script src="/it/data/uthos/observatories.js"></script>
-    <script src="/it/data/uthos/portals.js"></script>
+    <script src="/it/data/uthos/observatories.js"></script> -->
 
     <!-- Leaflet: Init -->
     <script src="/it/data/uthos/src/map.js"></script>
