Kingdoms political territory

--- a/it/uthos.html
+++ b/it/uthos.html
@@ -181,8 +181,8 @@
 
     <!-- Leaflet Markers: POIs -->
     <script src="/it/data/uthos/capitals.js"></script>
+    <script src="/it/data/uthos/kingdoms.js"></script>
     <!-- <script src="/it/data/uthos/roads.js"></script>
-    <script src="/it/data/uthos/regions.js"></script>
     <script src="/it/data/uthos/cities.js"></script>
     <script src="/it/data/uthos/keeps.js"></script>
     <script src="/it/data/uthos/villages.js"></script>
