--- a/it/uthos.html
+++ b/it/uthos.html
@@ -185,9 +185,9 @@
     <script src="/it/data/uthos/cities.js"></script>
     <script src="/it/data/uthos/keeps.js"></script>
     <script src="/it/data/uthos/locations.js"></script>
+    <script src="/it/data/uthos/ruins.js"></script>
     <!-- <script src="/it/data/uthos/roads.js"></script> -->
     <!-- <script src="/it/data/uthos/villages.js"></script> -->
-    <!-- <script src="/it/data/uthos/ruins.js"></script> -->
 
     <!-- Leaflet: Init -->
     <script src="/it/data/uthos/src/map.js"></script>
